@@ -110,11 +110,16 @@ ASSOC_OBJECTTYPE=Marker
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
 
 #
-# Ensembl Protein Sequence to Transcript Association Load settings
+# Ensembl Protein to Transcript Sequence Association Load settings
 #
 
-# Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembl_proteinseqassoc.txt
+# Name of config file
+CONFIG_SEQASSOC=ensemblprotein_seqseqassocload.config
+
+export CONFIG_SEQASSOC
+
+# Path to the seqseqassocload input file
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensemblprotein_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="translated from "
