@@ -110,11 +110,16 @@ ASSOC_OBJECTTYPE=Marker
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
 
 #
-# Ensembl Transcript Sequence to Transcript Association Load settings
+# Ensembl Transcript to Genomic Sequence Association Load settings
 #
 
+# Name of config file
+CONFIG_SEQASSOC=ensembltranscript_seqseqassocload.config
+
+export CONFIG_SEQASSOC
+
 # Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembl_transcriptseqassoc.txt
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/ensembltranscript_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="transcribed from "
