@@ -110,11 +110,16 @@ ASSOC_OBJECTTYPE=Marker
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
 
 #
-# VEGA Protein Sequence to Transcript Association Load settings
+# VEGA Protein to Transcript Sequence Association Load settings
 #
 
+# name of config file
+CONFIG_SEQASSOC=vegaprotein_seqseqassocload.config
+
+export CONFIG_SEQASSOC
+
 # Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vega_proteinseqassoc.txt
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vegaprotein_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="translated from "
