@@ -110,11 +110,16 @@ ASSOC_OBJECTTYPE=Marker
 export ASSOCLOADER_SH ASSOC_JNUMBER ASSOC_OBJECTTYPE
 
 #
-# VEGA Transcript Sequence to Transcript Association Load settings
+# VEGA Transcript to Genomic Sequence Association Load settings
 #
 
+# name of config file
+CONFIG_SEQASSOC=vegatranscript_seqseqassocload.config
+
+export CONFIG_SEQASSOC
+
 # Path to the seqseq_assocload input file
-INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vega_transcriptseqassoc.txt
+INFILE_SEQASSOCLOAD=${OUTPUTDIR}/vegatranscript_seqseqassoc.txt
 
 # Sequence Association Qualifier term
 QUALIFIER="transcribed from "
